Fix background overflow issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,14 +1,15 @@
+html {
+    background-color: greenyellow;
+}
+
 .app {
-    height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
-    background-color: greenyellow;
 }
 
 .content {
     width: 90%;
-    height: 80%;
     padding-left: 7.5%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
